# rust-recipes

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
test_data/: transactions.json
