[package]
name = "rust_recipes_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "d1_filework"
path = "src/lib.rs"

[[bin]]
name = "d1_load_trans"
path = "src/main.rs"

[dependencies]

serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
